# template_stm8

./: .clangd  .gitignore  CMakeLists.txt  README.txt  SDCC.toolchain.cmake  SDCCToolchain.cmake
src/: main.c
